--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL='http://localhost:5050/api'
+API_URL='http://113.61.108.5:8080/api'
 HUB_URL='http://localhost:5009/hubs'
 ClientId_Google=''
 ClientSecret_Google=''
