--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hot-loader": "^4.13.0",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.0.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
@@ -52,6 +53,7 @@
     "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.14",
     "@types/node": "^14.14.27",
+    "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "babel-helpers": "^6.24.1",
