--- a/src/assets/json/admin_config.json
+++ b/src/assets/json/admin_config.json
@@ -162,7 +162,7 @@
                 },
                 {
                     "code": "Menu",
-                    "name" : "Danh sách",
+                    "name" : "Menu",
                     "url": "/menu",
                     "icon": "bi bi-grid"
                 },
