Xong phan portal

--- a/src/assets/json/admin_config.json
+++ b/src/assets/json/admin_config.json
@@ -210,7 +210,7 @@
             "code": "Portal",
             "name" : "Cổng thông tin",
             "url": "/portal",
-            "icon": "bi bi-justify",
+            "icon": "bi bi-clipboard-data",
             "subMenu": [
                 {
                     "code": "QuanLyMenu",
