--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.8.3",
+    "ckeditor4-react": "^4.1.1",
     "datatables.net": "^1.12.1",
     "datatables.net-dt": "^1.12.1",
     "datatables.net-select": "^1.4.0",
