--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.4.0",
+    "@ckeditor/ckeditor5-react": "^5.0.6",
     "@microsoft/signalr": "^6.0.7",
     "@reduxjs/toolkit": "^1.8.2",
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.8.3",
-    "ckeditor4-react": "^4.1.1",
     "datatables.net": "^1.12.1",
     "datatables.net-dt": "^1.12.1",
     "datatables.net-select": "^1.4.0",
