--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 API_URL='http://113.61.108.5:8080/api'
+ROOT_URL='http://113.61.108.5:8080/'
 HUB_URL='http://localhost:5009/hubs'
 ClientId_Google=''
 ClientSecret_Google=''
