--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^35.4.0",
-    "@ckeditor/ckeditor5-react": "^5.0.6",
     "@microsoft/signalr": "^6.0.7",
     "@reduxjs/toolkit": "^1.8.2",
-    "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.8.3",
@@ -39,6 +36,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.6",
+    "suneditor": "^2.44.3",
+    "suneditor-react": "^3.4.1",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
