--- a/src/assets/json/portal_config.json
+++ b/src/assets/json/portal_config.json
@@ -1,72 +1,75 @@
 {
-    "routes": [
-        {
-            "code": "TrangChu",
-            "url": "/trang-chu",
-            "isLayout": true
-        },
-        {
-            "code": "GioiThieu",
-            "url": "/gioi-thieu",
-            "isLayout": true
-        },
-        {
-            "code": "KhoaHoc",
-            "url": "/khoa-hoc",
-            "isLayout": true
-        },
-        {
-            "code": "KienThuc",
-            "url": "/kien-thuc",
-            "isLayout": true
-        },
-        {
-            "code": "ChinhDangChayBo",
-            "url": "/chinh-dang-chay-bo",
-            "isLayout": true
-        },
-        {
-            "code": "HoTro",
-            "url": "/ho-tro",
-            "isLayout": true
-        },
-        {
-            "code": "KhoaHocChiTiet",
-            "url": "/khoa-hoc-chi-tiet",
-            "isLayout": true
-        },
-        {
-            "code": "KhoaHocThu",
-            "url": "/khoa-hoc-thu",
-            "isLayout": true
-        },
-        {
-            "code": "KienThuChiTiet",
-            "url": "/kien-thuc-chi-tiet",
-            "isLayout": true
-        },
-        {
-            "code": "ThanhToan",
-            "url": "/thanh-toan",
-            "isLayout": true
-        },
-        {
-            "code": "GioHang",
-            "url": "/gio-hang",
-            "isLayout": true
-        },
-        {
-            "code": "DangNhap",
-            "url": "/dang-nhap",
-            "isLayout": false
-        },
-        {
-            "code": "DangKy",
-            "url": "/dang-ky",
-            "isLayout": false
-        }
-    ],
-    "menu": [
-        
-    ]
+  "routes": [
+    {
+      "code": "TrangChu",
+      "url": "/trang-chu",
+      "isLayout": true
+    },
+    {
+      "code": "GioiThieu",
+      "url": "/gioi-thieu",
+      "isLayout": true
+    },
+    {
+      "code": "KhoaHoc",
+      "url": "/khoa-hoc",
+      "isLayout": true
+    },
+    {
+      "code": "KienThuc",
+      "url": "/kien-thuc",
+      "isLayout": true
+    },
+    {
+      "code": "ChinhDangChayBo",
+      "url": "/chinh-dang-chay-bo",
+      "isLayout": true
+    },
+    {
+      "code": "HoTro",
+      "url": "/ho-tro",
+      "isLayout": true
+    },
+    {
+      "code": "KhoaHocChiTiet",
+      "url": "/khoa-hoc-chi-tiet",
+      "isLayout": true
+    },
+    {
+      "code": "KhoaHocThu",
+      "url": "/khoa-hoc-thu",
+      "isLayout": true
+    },
+    {
+      "code": "KienThuChiTiet",
+      "url": "/kien-thuc-chi-tiet",
+      "isLayout": true
+    },
+    {
+      "code": "ThanhToan",
+      "url": "/thanh-toan",
+      "isLayout": true
+    },
+    {
+      "code": "GioHang",
+      "url": "/gio-hang",
+      "isLayout": true
+    },
+    {
+      "code": "DangNhap",
+      "url": "/dang-nhap",
+      "isLayout": false
+    },
+    {
+      "code": "DangKy",
+      "url": "/dang-ky",
+      "isLayout": false
+    },
+    {
+      "code": "ChiTietTinTuc",
+      "url": "/chi-tiet-tin-tuc",
+      "isLayout": true
+    }
+  ],
+  "menu": []
 }
