--- a/src/assets/json/admin_config.json
+++ b/src/assets/json/admin_config.json
@@ -19,6 +19,12 @@
       "isMenu": true
     },
     {
+      "code": "QuanLyNhomVideo",
+      "url": "/quan-ly-nhom-video",
+      "isLayout": true,
+      "isMenu": true
+    },
+    {
       "code": "Organ",
       "url": "/organ",
       "isLayout": true,
@@ -51,6 +57,12 @@
     {
       "code": "QuanLyNhomTinTuc",
       "url": "/quan-ly-nhom-tin-tuc",
+      "isLayout": true,
+      "isMenu": true
+    },
+    {
+      "code": "QuanLyVideo",
+      "url": "/quan-ly-video",
       "isLayout": true,
       "isMenu": true
     },
@@ -354,6 +366,18 @@
           "code": "QuanLyGiaoDien",
           "name": "Quản lý giao diện",
           "url": "/quan-ly-giao-dien",
+          "icon": "bi bi-grid"
+        },
+        {
+          "code": "QuanLyNhomVideo",
+          "name": "Quản lý nhóm video",
+          "url": "/quan-ly-nhom-video",
+          "icon": "bi bi-grid"
+        },
+        {
+          "code": "QuanLyVideo",
+          "name": "Quản lý video",
+          "url": "/quan-ly-video",
           "icon": "bi bi-grid"
         }
       ]
