--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^17.0.0",
     "react-hot-loader": "^4.13.0",
     "react-owl-carousel": "^2.3.3",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
