--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "datatables.net": "^1.12.1",
     "datatables.net-dt": "^1.12.1",
     "datatables.net-select": "^1.4.0",
+    "dompurify": "^2.4.3",
     "element-react": "^1.4.34",
     "element-theme-default": "^1.4.13",
     "gapi-script": "^1.2.0",
@@ -51,6 +52,7 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.16",
     "@babel/runtime": "^7.15.3",
+    "@types/dompurify": "^2.4.0",
     "@types/history": "^4.7.7",
     "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.14",
