--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "history": "^5.3.0",
     "jquery": "^3.6.0",
     "react": "^17.0.0",
+    "react-animated-tree": "^1.0.10",
     "react-dom": "^17.0.0",
     "react-hot-loader": "^4.13.0",
     "react-owl-carousel": "^2.3.3",
