--- a/src/assets/json/TrangChu_config.json
+++ b/src/assets/json/TrangChu_config.json
@@ -1,6 +1,6 @@
 {
     "GioiThieu" : {
-        "TieuDe": "",
+        "TieuDe": "ĐĂNG QUANG MARATHON",
         "MaNhomTinTuc": "TT1",
         "SoLuong": 3
     },
