--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-API_URL='http://113.61.108.5:8080/api'
-# API_URL='http://localhost:5050/api'
-Image_Gallery_Url='http://113.61.108.5:8080/api/Por_Anh/ImageGallery?limit=100'
-# Image_Gallery_Url='http://localhost:5050/api/Por_Anh/ImageGallery?limit=100'
+#API_URL='http://113.61.108.5:8080/api'
+API_URL='http://localhost:5050/api'
+#Image_Gallery_Url='http://113.61.108.5:8080/api/Por_Anh/ImageGallery?limit=100'
+Image_Gallery_Url='http://localhost:5050/api/Por_Anh/ImageGallery?limit=100'
 #ROOT_URL='http://113.61.108.5:8080/'
 ROOT_URL='http://localhost:5050/'
