--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL='http://113.61.108.5:8080/api'
+API_URL='https://localhost:3000/api'
 Image_Gallery_Url='http://113.61.108.5:8080/api/Por_Anh/ImageGallery?limit=100'
 ROOT_URL='http://113.61.108.5:8080/'
 
